--- a/src/3rd/sqlite/CMakeLists.txt
+++ b/src/3rd/sqlite/CMakeLists.txt
@@ -1,14 +1,15 @@
-cmake_minimum_required(VERSION 2.8)
 
 set(LIB_SQLITE sqlite)
 
+aux_source_directory(${BUMO_SRC_DIR}/3rd/sqlite/ SQLITE_SRC)
 
-SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
-
-file(GLOB SQLITE_HEADERS *.h)
-file(GLOB SQLITE_SOURCES *.c)
-
-include_directories(./)
+#file(GLOB SQLITE_HEADERS *.h)
+#file(GLOB SQLITE_SOURCES *.c)
 
 #generate static library file
-add_library(${LIB_SQLITE} STATIC ${SQLITE_HEADERS} ${SQLITE_SOURCES}) 
+add_library(${LIB_SQLITE} ${SQLITE_SRC})
+
+target_compile_options(${LIB_SQLITE} 
+	PUBLIC -DASIO_STANDALONE 
+	PUBLIC -fPIC
+)
