--- a/src/3rd/soci/src/backends/sqlite3/CMakeLists.txt
+++ b/src/3rd/soci/src/backends/sqlite3/CMakeLists.txt
@@ -1,18 +1,19 @@
 
-cmake_minimum_required(VERSION 2.8)
 
 set(LIB_SOCI_SQLITE3 soci_sqlite3)
 
-SET(LIBRARY_OUTPUT_PATH ${SOCI_PATH}/lib)
+#file(GLOB SOCI_SQLITE3_HEADERS *.h)
+#file(GLOB SOCI_SQLITE3_SOURCES *.cpp)
 
-file(GLOB SOCI_SQLITE3_HEADERS *.h)
-file(GLOB SOCI_SQLITE3_SOURCES *.cpp)
+aux_source_directory(${BUMO_SRC_DIR}/3rd/soci/src/backends/sqlite3 SOCI_SQLITE_SRC)
 
-include_directories(
-    ./
-    ../../core
-    ../../../../sqlite
-    )
 
 #generate static library file
-add_library(${LIB_SOCI_SQLITE3} STATIC ${SOCI_SQLITE3_HEADERS} ${SOCI_SQLITE3_SOURCES}) 
+add_library(${LIB_SOCI_SQLITE3} ${SOCI_SQLITE_SRC})
+
+target_compile_options(${LIB_SOCI_SQLITE3} 
+	PUBLIC -DASIO_STANDALONE 
+	PUBLIC -fPIC
+)
+
+target_link_libraries(${LIB_SOCI_SQLITE3} sqlite soci)
